[tool.poetry]
name = "sms-classification"
version = "0.0.1"
description = "Test different methods to classify sms messages into spam/non-spam"
authors = ["Alexander Schulz"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
matplotlib = "^3.10.1"
torch = "^2.6.0"
numpy = "^2.2.4"
scipy = "^1.15.2"
notebook = "^7.4.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.1"
pytest-cov = ">=4.1"
pytest-structlog = ">=0.5"

[tool.poetry.group.dev.dependencies]
autoflake = ">=2.0"
black = ">=22.1"
coverage = ">=7.0"
flake8 = ">=6.0.0"
isort = ">=5.8.0"
pre-commit = ">=2.12.1"
yamllint = ">=1.28"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"